--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -40,11 +40,10 @@ jobs:
 
       # Execute Codacy Analysis CLI and generate a SARIF output with the security issues identified during the analysis
       - name: Run Codacy Analysis CLI
-        uses: codacy/codacy-analysis-cli-action@562ee3e92b8e92df8b67e0a5ff8aa8e261919c08
+        uses: codacy/codacy-analysis-cli-action@master
         with:
           # Check https://github.com/codacy/codacy-analysis-cli#project-token to get your project token from your Codacy repository
           # You can also omit the token and run the tools that support default configurations
-          verbose: true
           output: results.sarif
           format: sarif
           # Adjust severity of non-security issues
@@ -52,7 +51,6 @@ jobs:
           # Force 0 exit code to allow SARIF file generation
           # This will handover control about PR rejection to the GitHub side
           max-allowed-issues: 2147483647
-          min-severity: error
 
       # Upload the SARIF file generated in the previous step
       - name: Upload SARIF results file
