Update Dependabot group names to include ecosystem type (#33)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,7 +12,7 @@ updates:
     cooldown:
       default-days: 3
     groups:
-      minor-and-patch:
+      nuget-minor-and-patch:
         update-types:
           - "minor"
           - "patch"
@@ -24,7 +24,7 @@ updates:
     cooldown:
       default-days: 3
     groups:
-      minor-and-patch:
+      docker-minor-and-patch:
         update-types:
           - "minor"
           - "patch"
@@ -36,7 +36,7 @@ updates:
     cooldown:
       default-days: 3
     groups:
-      minor-and-patch:
+      docker-compose-minor-and-patch:
         update-types:
           - "minor"
           - "patch"
@@ -48,7 +48,7 @@ updates:
     cooldown:
       default-days: 3
     groups:
-      minor-and-patch:
+      github-actions-minor-and-patch:
         update-types:
           - "minor"
           - "patch"
