--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -34,6 +34,61 @@ jobs:
         # Commonly enabled options, see https://github.com/actions/dependency-review-action#configuration-options for all available options.
         with:
           comment-summary-in-pr: always
-        #   fail-on-severity: moderate
-        #   deny-licenses: GPL-1.0-or-later, LGPL-2.0-or-later
+        #  fail-on-severity: moderate
+          allow-licenses: |
+            Apache-1.0,
+            Apache-1.1,
+            Apache-2.0,
+            BSL-1.0,
+            BSD-1-Clause,
+            BSD-2-Clause,
+            BSD-2-Clause-FreeBSD,
+            BSD-2-Clause-NetBSD,
+            BSD-3-Clause,
+            BSD-3-Clause-Clear,
+            BSD-3-Clause-No-Nuclear-License,
+            BSD-3-Clause-No-Nuclear-License-2014,
+            BSD-3-Clause-No-Nuclear-Warranty,
+            BSD-3-Clause-Open-MPI,
+            BSD-4-Clause,
+            BSD-Protection,
+            BSD-Source-Code,
+            BSD-3-Clause-Attribution,
+            0BSD,
+            BSD-2-Clause-Patent,
+            BSD-4-Clause-UC,
+            MIT-CMU,
+            CC-BY-3.0,
+            CC-BY-SA-1.0,
+            CC-BY-SA-2.0,
+            CC-BY-SA-2.5,
+            CC-BY-SA-3.0,
+            CC-BY-SA-4.0,
+            CC0-1.0,
+            WTFPL,
+            MIT-enna,
+            MIT-feh,
+            ISC,
+            JSON,
+            BSD-3-Clause-LBNL,
+            MITNFA,
+            MIT,
+            MIT-0,
+            UPL-1.0,
+            NCSA,
+            X11,
+            Xerox,
+
+            BlueOak-1.0.0,
+            CC-BY-4.0,
+            MS-PL,
+            PostgreSQL,
+            Python-2.0,
+            SSPL-1.0,
+            OFL-1.1,
+            Unlicense,
+            Unicode-DFS-2016,
+            Unicode-3.0
+
         #   retry-on-snapshot-warnings: true
+          warn-on-openssf-scorecard-level: 5
