--- a/HelloWorldApi/Dockerfile
+++ b/HelloWorldApi/Dockerfile
@@ -1,12 +1,12 @@
 # Use the official .NET 8 SDK image for build
-FROM mcr.microsoft.com/dotnet/sdk@sha256:20946c3da829b92ccfccfb9e07ee3490fb78cbf2fbc3d2472eb20651b57dd10c AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0@sha256:20946c3da829b92ccfccfb9e07ee3490fb78cbf2fbc3d2472eb20651b57dd10c AS build
 WORKDIR /src
 COPY . .
 RUN dotnet restore --locked-mode
 RUN dotnet publish -c Release -o /app/publish --no-restore
 
 # Use the official .NET 8 ASP.NET runtime image for runtime
-FROM mcr.microsoft.com/dotnet/aspnet:8.0.22 AS final
+FROM mcr.microsoft.com/dotnet/aspnet:8.0@sha256:45b33e8b92bbb0dd54727e4bc081d41539796c6e35d8983773762b2354bbf170 AS final
 WORKDIR /app
 COPY --from=build /app/publish .
 EXPOSE 8080
