--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -33,8 +33,9 @@ jobs:
         uses: actions/dependency-review-action@3c4e3dcb1aa7874d2c16be7d79418e9b7efd6261 # v4.8.2
         # Commonly enabled options, see https://github.com/actions/dependency-review-action#configuration-options for all available options.
         with:
+          retry-on-snapshot-warnings: true
+          retry-on-snapshot-warnings-timeout: 60
           comment-summary-in-pr: always
-        #  fail-on-severity: moderate
           allow-licenses: |
             Apache-1.0,
             Apache-1.1,
