Update dependabot.yml (#60)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,7 @@ version: 2
 updates:
   - package-ecosystem: "nuget"
     directory: "/"
+    target-branch: dev
     schedule:
       interval: "weekly"
     cooldown:
@@ -14,11 +15,13 @@ updates:
 
   - package-ecosystem: "docker"
     directory: "/HelloWorldApi"
+    target-branch: dev
     schedule:
       interval: "daily"
 
   - package-ecosystem: "docker-compose"
     directory: "/"
+    target-branch: dev
     schedule:
       interval: "weekly"
     cooldown:
@@ -26,6 +29,7 @@ updates:
 
   - package-ecosystem: "github-actions"
     directory: "/"
+    target-branch: dev
     schedule:
       interval: "weekly"
     cooldown:
